--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -48,6 +48,18 @@ ru:
       header: "Тест %{title} завершен"
     update:
       completed: "Тест завершен"
+    gist:
+      success: "Gist успешно сохранен, %{gist_url}"
+      failure: 'Во время сохранения gist произошла ошибка'
+
+  gist:
+    index:
+      question: 'Вопрос'
+      gist_url: 'Ссылка на gist'
+      user: 'Пользователь'
+
+  gist_question_service:
+    description: "Вопрос о %{title} для TestGuru"
 
   admin:
     nav:
