Data-attribute.lesson16

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,6 +96,8 @@ en:
         choice: "Are you sure?"
         edit: "Edit"
         delete: "Delete"
+      form_inline:
+        submit: 'Ok'
 
   tests_mailer:
     completed_test:
