edit registration form

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -47,6 +47,12 @@ en:
         sign_up: 'Sign Up'
         success: 'Passwords match!'
         alert: 'Passwords do not match!'
+        header: 'Registration new user'
+        first_name: 'First name'
+        last_name: 'Last name'
+        email: 'E-mail'
+        password: 'Password'
+        confirm_password: 'Confirm password'
     sessions:
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
