--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -47,9 +47,16 @@ ru:
       updated: "Ваша учётная запись успешно изменена."
       updated_but_not_signed_in: "Ваш аккаунт успешно изменен, но так как ваш пароль изменился, нужно войти снова."
       new:
-        sign_up: 'Зарегистрироваться'
+        sign_up: 'Зарегистрироваться!'
         success: 'Пароли совпадают!'
         alert: 'Пароли не совпадают'
+        header: 'Регистрация пользователя'
+        first_name: 'Имя'
+        last_name: 'Фамилия'
+        email: 'E-mail'
+        password: 'Пароль'
+        confirm_password: 'Подтверждение пароля'
+
     sessions:
       signed_in: "Вход в систему выполнен."
       signed_out: "Выход из системы выполнен."
