--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
       title: "Title"
       level: "Level"
       questions: "Questions"
+      status: "Status comleted"
       actions: "Actions"
     start:
       begin: "Test begun '%{title}'"
